--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@
     <h1>英作文練習</h1>
     
     <!-- 問題文を表示 -->
-    <p>{{ question['question'] }}</p>
+   <!-- 問題文を表示 -->
+    <p id="question-text">{{ question['question'] }}</p>
+
     
     <form id="answer-form">
         <!-- 問題文を隠しフィールドに設定 -->
