--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -179,20 +179,39 @@ button[type="submit"]:hover {
 }
 
 
-.loader {
-    border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 2s linear infinite;
-    margin-left: auto; /* 中央寄せ */
-    margin-right: auto; /* 中央寄せ */p
+#loading {
+    display: none; /* 初期状態では非表示 */
+    position: fixed; /* 画面のスクロールに関係なく表示 */
+    top: 50%; /* 画面の垂直中央 */
+    left: 50%; /* 画面の水平中央 */
+    transform: translate(-50%, -50%); /* 中央位置を調整 */
+    z-index: 9999; /* 他の要素の上に表示 */
+    background-color: rgba(255, 255, 255, 0.8); /* 背景色を半透明にして全画面の上に */
+    width: 100%; /* 全画面に広げる */
+    height: 100%; /* 全画面に広げる */
 }
 
+.loader {
+    border: 5px solid #f3f3f3; /* ライトグレー */
+    border-top: 5px solid #3498db; /* 青 */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%; /* ローダー自体を親要素の中央に配置 */
+    left: 50%; /* ローダー自体を親要素の中央に配置 */
+    transform: translate(-50%, -50%);
+}
+
+/* アニメーション定義 */
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 #follow-up {
