Fix feedback formatting and clean up HTML tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     </head>
     
 <body>
-    <h1>英作文練習</h1>
+    <h1>一日一行の英作文：One Line</h1>
     <div id="current-level-display">
         現在のレベル: <span id="current-level">未設定</span>
     </div>
